# py-edge-ai-acoustic-monitoring-app

./: .env.aws  .env.gcp  .env.mgc  CONTRIBUTING.md  Makefile  pyproject.toml  security_policy.yaml  security_policy_baby.yaml  security_policy_forest.yaml  security_policy_home.yaml  security_policy_industry.yaml  test_policy.yaml
.github/workflows/: ci.yml
docs/: METRICS.md  RASPBERRYPI4.md  UMIK-1.md  YAMNET.md
scripts/analysis/: enhance_voice.py
scripts/audio/: decibel_meter.py  record.py
scripts/raspberrypi/: fan_test.py
scripts/umik-1/: calibrate_umik1.py  calibrator.py
src/: __init__.py  audio_metrics.py
src/app/: base_audio_app.py  calibration.py  context.py  main.py  settings.py
src/app/services/: cloud_storage_providers.py  cloud_uploader_service.py  health_monitor_service.py  prometheus_service.py  system_heartbeat_service.py  telegram_bot_client.py
src/app/sinks/: feature_extractor_sink.py  policy_engine_sink.py  smart_recorder_sink.py
src/audio_classification/: model.py  process.py
src/audio_device/: calibrator.py  calibrator_adapter.py  config.py
src/audio_streams/: audio_pipeline.py  consumer_thread.py  listener_thread.py  recorder.py
src/config/: audio_app_config.py
src/domain/: interfaces.py
src/models/: recorder_adapter.py
src/py-edge-ai-acoustic-monitoring-app/adapters/: zmq_adapters.py
src/scripts/: install_services.py  setup_yamnet.py
src/scripts/raspberrypi/: fan_test.py
src/setup/: edge-consumer.service  edge-monitor.service  edge-producer.service
