[project]
name = "py-edge-ai-acoustic-monitoring-app"
version = "1.0.0"
description = "Base utilities for working with the Umik-1 microphone in Python applications."
authors = [
    {name = "Daniel Collier", email = "danielfcollier@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <3.14"

# Production Dependencies
dependencies = [
    "numpy==2.3.4",
    "scipy==1.16.2",
    "pydantic==2.12.3",
    "sounddevice==0.5.3",
    "librosa==0.11.0",
    "pyloudnorm==0.1.1",
    "pydantic-settings>=2.0.0",
    "tensorflow>=2.20.0",
    "tensorflow-hub>=0.16.1",
]

# Development Dependencies
[project.optional-dependencies]
dev = [
    "ruff==0.14.1",
    "mypy==1.18.2",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
pythonpath = "."

[tool.ruff]
line-length = 120
target-version = "py313"
exclude = [
    ".venv",
    ".git",
    "__pycache__",
    ".github",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "C90", "UP"]

[tool.ruff.lint.mccabe]
max-complexity = 30

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
plugins = ['pydantic.mypy']
ignore_missing_imports = true
check_untyped_defs = true
namespace_packages = true

