[project]
name = "edge-ai-acoustic-monitoring-app"
version = "0.1.0"
description = "Edge AI Acoustic Monitoring App"
authors = [
    {name = "Daniel Collier", email = "danielfcollier@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "umik-base-app>=0.3.1a1.dev0",
    "dotenv>=0.9.9",
    "pydantic==2.12.3",
    "pydantic-settings>=2.0.0",
    "tensorflow>=2.16.0",
    "tflite-runtime>=2.14.0",
    "tensorflow-hub>=0.16.1",
    "rule-engine>=4.5.3",
    "pyyaml>=6.0.3",
    "boto3>=1.42.19",
    "python-telegram-bot>=22.5",
    "httpx>=0.28.1",
    "resampy>=0.4.3",
    "psutil>=7.2.1",
    "google-cloud-storage>=3.7.0",
    "prometheus-client>=0.17.1",
]

[project.urls]
"Homepage" = "https://github.com/danielfcollier/py-edge-ai-acoustic-monitoring-app"
"Bug Tracker" = "https://github.com/danielfcollier/py-edge-ai-acoustic-monitoring-app/issues"

[project.scripts]
edge-monitor-run = "app.main:main"
edge-monitor-setup-models = "scripts.setup_yamnet:main"
edge-monitor-install-service = "scripts.install_service:main"

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
pythonpath = "."

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
    ".venv",
    ".git",
    "__pycache__",
    ".github",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "C90", "UP"]

[tool.ruff.lint.mccabe]
max-complexity = 30

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
plugins = ['pydantic.mypy']
ignore_missing_imports = true
check_untyped_defs = true
namespace_packages = true

[dependency-groups]
analysis = [
    "boto3>=1.42.19",
    "markdown>=3.10",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
    "weasyprint>=67.0",
]

[project.optional-dependencies]
dev = [
    "ruff~=0.14.1",
    "mypy~=1.18.2",
    "pytest>=9.0.2",
]